# mash-pa

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  entry.py  install.sh  pyproject.toml
.github/workflows/: release.yml
pa/: cli.py  spec.py  store.py
pa/catalog/: __init__.py  _base.py  _llm.py
pa/catalog/agents/: __init__.py
pa/catalog/agents/finance_watch/: __init__.py  spec.py
pa/catalog/agents/gh_brief/: __init__.py  spec.py
pa/catalog/digest/: __init__.py  _github.py  _output.py  _rss.py  _skills.py  _store.py  _tools.py
pa/catalog/digest/agents/: __init__.py
pa/catalog/digest/agents/digest_concierge/: __init__.py  spec.py
pa/catalog/digest/agents/digest_curator/: __init__.py  spec.py
pa/catalog/digest/agents/github_digest/: __init__.py  spec.py
pa/catalog/digest/agents/interview_user/: __init__.py  spec.py
pa/catalog/digest/agents/run_digest/: __init__.py  spec.py
pa/catalog/digest/skills/curate-digest/: SKILL.md
pa/catalog/digest/skills/github-digest/: SKILL.md
pa/catalog/digest/skills/onboard-topics/: SKILL.md
pa/catalog/digest/tools/: __init__.py  _base.py  digests.py  rss_feeds.py  runs.py  topics.py
